added styling to the page for the forecasts

--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -1,4 +1,41 @@
+.container {
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: darkgray;
+    border-width: 1px;
+    padding: 2%;
+    width: 80%;
+}
+
+#forecastBox {
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    padding-left: 25px;
+    padding-bottom: 20px;
+    background-color: #a8d9f9;
+    border-radius: 15px;
+
+}
+.forecast {
+    border-style: solid;
+    border-color: black;
+    border-radius: 15px;
+    border-width: 1px;
+    width: 30%;
+    padding: 2%;
+    float: left;
+    margin: 2px;
+    background-color: #f2f2f2;
+    box-sizing: border-box;
+    text-align: center;
+
+}
 #mapCanvas {
-    width: 770px;
-    height: 481px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    width: 100%;
+    height: 300px;
+
 }
