--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -14,7 +14,7 @@ font-family: Verdana;
     border-width: 0px;
     width: 80%;
 }
-#topContainer {
+.subContainer {
     padding-bottom: 20px;
     padding-left: 25px;
 }
